--- a/css/user.css
+++ b/css/user.css
@@ -7,19 +7,16 @@
 }
 
 .reveal {
-    font-family: textbook, Arial;
+    font-family: textbook-light, Arial;
 }
 
-.reveal h1, .reveal h2, .reveal h3 {
-    font-family: textbook-bold, Arial;
-}
-
-.reveal h4, .reveal h5, .reveal h6 {
-    font-family: textbook, Arial;
-}
-
-.reveal code {
-    font-family: monospace, textbook, Arial;
+.reveal h1,
+.reveal h2,
+.reveal h3,
+.reveal h4,
+.reveal h5,
+.reveal h6 {
+    font-family: textbook-light, Arial;
 }
 
 @font-face {
@@ -29,6 +26,7 @@
     src: url('../fonts/textbook-regular.woff'),
     url('../fonts/textbook-regular.ttf');
 }
+
 @font-face {
     font-family: textbook-light;
     font-weight: 200;
@@ -36,12 +34,20 @@
     src: url('../fonts/textbook-light.woff'),
     url('../fonts/textbook-light.ttf');
 }
+
 @font-face {
     font-family: textbook-bold;
     font-weight: 700;
     src: local(textbook-bold);
     src: url('../fonts/textbook-bold.woff'),
     url('../fonts/textbook-bold.ttf');
+}
+
+@font-face {
+    font-family: sourcecodepro-light;
+    font-weight: 200;
+    src: local(textbook-bold);
+    src: url('../fonts/SourceCodePro-Light.ttf');
 }
 
 section.size-L,
@@ -80,12 +86,6 @@ pre.size-XXS {
     line-height: 37px;
 }
 
-.reveal pre {
-    width: 100%;
-    margin: 0;
-    box-shadow: none;
-}
-
 .reveal .slides > section > section {
     padding: 0;
 }
@@ -110,4 +110,115 @@ pre.size-XXS {
     background-color: rgba(255,255,255,0.6);
     color: #252525;
     text-shadow: none;
+}
+
+.red {
+    color: #ab4642 !important;
+}
+
+.green {
+    color: #a1b56c !important;
+}
+
+.magenta {
+    color: #a0a0f0 !important;
+}
+
+.grey {
+    color: #777 !important;
+}
+
+img {
+    background: none !important;
+    max-width: 100%;
+    max-height: 100%;
+    border: 0 !important;
+}
+
+.pos,
+.neg,
+.question {
+    padding-left: 50px !important;
+}
+
+
+.pos:before,
+.neg:before,
+.question:before {
+    position: absolute;
+    left: 0;
+}
+
+.pos:before {
+    content: '✓';
+    color: #a1b56c !important;
+}
+
+.neg:before {
+    content: '✗';
+    color: #992200 !important;
+}
+
+.question:before {
+    content: '?';
+    color: #546BD2 !important;
+}
+
+.reveal .slide-number {
+    font-family: 'sourcecodepro-light';
+    font-size: 1em;
+    background-color: #111111;
+    padding: 7px;
+}
+
+.reveal pre
+{
+    box-shadow: none;
+    font-family: 'sourcecodepro-light', textbook-light, Arial;
+    width: 100%;
+    margin: 0;
+}
+
+.reveal pre.code
+{
+    display: block;
+    padding: 5px;
+    overflow: auto;
+    word-wrap: normal;
+    color: #dcdcdc;
+    background: rgba(63, 63, 63, 0.6);
+}
+
+.reveal pre code {
+    max-height: 650px;
+    font-family: 'sourcecodepro-light', textbook-light, Arial;
+    background: rgba(63, 63, 63, 0.6);
+    padding: 10px;
+}
+
+.reveal code {
+    font-family: monospace, textbook, Arial;
+}
+
+.join {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}
+
+.join code {
+    padding: 18px 25px !important;
+    border: 0 !important;
+}
+
+.left {
+    text-align: left;
+}
+
+.reveal mark, .reveal mark *
+{
+    color: black !important;
+}
+
+.textbook {
+    font-family: 'textbook-light';
 }
