--- a/css/user.css
+++ b/css/user.css
@@ -49,7 +49,7 @@
 
 @font-face {
     font-family: sourcecodepro-light;
-    font-weight: 200;
+    font-weight: 600;
     src: local(textbook-bold);
     src: url('../fonts/SourceCodePro-Light.ttf');
 }
@@ -57,8 +57,8 @@
 section.size-L,
 section .size-L,
 pre.size-L {
-    font-size: 60px;
-    line-height: 90px;
+    font-size: 55px;
+    line-height: 80px;
 }
 
 section.size-M,
@@ -169,9 +169,10 @@ img {
 }
 
 .reveal .slide-number {
-    font-family: 'sourcecodepro-light';
+    font-family: 'sourcecodepro-light', textbook-light, Arial;
     font-size: .7em;
-    background-color: #111111;
+    background-color: rgba(255, 255, 255, 0.75);;
+    color: black;
     padding: 7px;
 }
 
@@ -190,18 +191,18 @@ img {
     overflow: auto;
     word-wrap: normal;
     color: #dcdcdc;
-    background: rgba(63, 63, 63, 0.6);
+    background: #333333;
 }
 
 .reveal pre code {
     max-height: 650px;
-    font-family: 'sourcecodepro-light', textbook-light, Arial;
-    background: rgba(63, 63, 63, 0.6);
+    background: white;
     padding: 10px;
+    width: 1024px;
 }
 
 .reveal code {
-    font-family: monospace, textbook, Arial;
+    font-family: 'sourcecodepro-light', textbook, Arial;
 }
 
 .join {
@@ -225,4 +226,8 @@ img {
 
 .textbook {
     font-family: 'textbook-light';
+}
+
+.reveal section img {
+    box-shadow: none;
 }
